# ci-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: dom.rs  gitlab.rs  lib.rs
www/: config_sample.json  index.html  index.js  package-lock.json  package.json
www/css/: ci-dashboard.css  gitlab-dashboard.css
