[package]
edition = "2018"
name = "ci-dashboard"
version = "0.1.0"
authors = ["niveau0 <plingplong@t-online.de>"]
description = "CI-Dashboard to display CI pipeline and their jobs status."
license = "Apache-2.0"
repository = "git@github.com:niveau0/ci-dashboard.git"

[lib]
crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
futures = "0.3"
futures-util = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Location',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
